@@ -1,3 +1,5 @@
+- diskdrake:
+  o add support for ext4
 - drakbug:
   o keep buggy process around so that we can run gdb on it (if perl segfaulted)
 - harddrake: detect storage and various controllers before anything else
